WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269155
ShadowRoot.h shouldn't include HTMLVideoElement.h
https://bugs.webkit.org/show_bug.cgi?id=269155
Summary
ShadowRoot.h shouldn't include HTMLVideoElement.h
Ryosuke Niwa
Reported
2024-02-10 20:27:09 PST
ShadowRoot.h shouldn't include HTMLVideoElement.h. There is no need.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-02-10 22:03:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24223
EWS
Comment 2
2024-02-11 15:22:44 PST
Committed
274450@main
(cd3428091d60): <
https://commits.webkit.org/274450@main
> Reviewed commits have been landed. Closing PR #24223 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-11 15:23:14 PST
<
rdar://problem/122763460
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug