ShadowRoot.h shouldn't include HTMLVideoElement.h https://bugs.webkit.org/show_bug.cgi?id=269155

Reviewed by Jean-Yves Avenard.

Remove #include "HTMLVideoElement.h" from ShadowRoot.h.

* Source/WebCore/bindings/js/JSDOMConvertInterface.h:
* Source/WebCore/dom/ShadowRoot.cpp:
(WebCore::ShadowRoot::pictureInPictureElement const): Now returns Element*. Forward declaring
HTMLVideoElement isn't sufficient since DocumentOrShadowRoot+FullScreen.idl requires converting
the return value of this function to Element.
* Source/WebCore/dom/ShadowRoot.h:

Canonical link: https://commits.webkit.org/274450@main